--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,29 +1,71 @@
+a{
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+
+li{
+  list-style-type: none;
+}
+
+ul{
+  padding-left: 0;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
+  display: flex;
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  align-items: center;
+  padding-left: 16px;
+}
+
+.middle{
+  display: flex;
+  flex: 1;
+  padding-right: 50px;
 }
 
 .footer {
+  display: flex;
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
 }
 
 .sidebar {
+  display: flex;
+  flex-shrink: 0;
+  padding: 16px;
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+}
+
+.cards{
+  display: flex;
+  padding: 32px;
+  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 250px;
 }
